Alterações no HERO da página

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </nav>
             <nav class="navBtns">
                 <a href="#"><button class="btn btn0">Contactar</button></a>
-                <a href="#"><button class="btn">Enviar Palpite</button></a>
+                <a href="#"><button class="btn">Enviar Palpite <i class="fa-solid fa-paper-plane"></i></button></a>
             </nav>
         </nav>
     </header>
@@ -73,7 +73,7 @@
                         <span>1</span>
                     </nav>
                     <nav class="iconeFuncione">
-                        <i>Ícone</i>
+                        <i class="fa-solid fa-brain"></i>
                     </nav>
                     <nav class="titleFunciona">
                         <h4>Crie palpites certeiros</h4>
@@ -88,7 +88,7 @@
                         <span>2</span>
                     </nav>
                     <nav class="iconeFuncione">
-                        <i>Ícone</i>
+                        <i class="fa-solid fa-chart-line"></i>
                     </nav>
                     <nav class="titleFunciona">
                         <h4>Verifique as odds/pontos</h4>
@@ -104,7 +104,7 @@
                         <span>3</span>
                     </nav>
                     <nav class="iconeFuncione">
-                        <i>Ícone</i>
+                        <i class="fa-solid fa-paper-plane"></i>
                     </nav>
                     <nav class="titleFunciona">
                         <h4>Envie o seu palpite certeiro</h4>
@@ -119,7 +119,7 @@
                         <span>4</span>
                     </nav>
                     <nav class="iconeFuncione">
-                        <i>Ícone</i>
+                        <i class="fa-solid fa-calendar-days"></i>
                     </nav>
                     <nav class="titleFunciona">
                         <h4>Faça durante 10 dias</h4>
@@ -129,14 +129,12 @@
                     </nav>
                 </nav>
 
-                <!-- Esta é a sua chance de transformar seus acertos em reconhecimento, oportunidade e recompensa real! -->
-
                 <nav class="cardFunciona">
                     <nav class="numeroFunciona">
                         <span>5</span>
                     </nav>
                     <nav class="iconeFuncione">
-                        <i>Ícone</i>
+                        <i class="fa-solid fa-trophy"></i>
                     </nav>
                     <nav class="titleFunciona">
                         <h4>Ganhe os seus prémios</h4>
@@ -151,7 +149,7 @@
                         <span>6</span>
                     </nav>
                     <nav class="iconeFuncione">
-                        <i>Ícone</i>
+                        <i class="fa-solid fa-info"></i>
                     </nav>
                     <nav class="titleFunciona">
                         <h4>Informações extras</h4>
@@ -330,7 +328,7 @@
         </section>
 
         <section class="secao secao6">
-            <h4 class="textoImpactante">O objetivo é tornar as previsões desportivas, climáticas e políticas precisas e estatisticamente confiáveis.</h4>
+            <h4 class="textoImpactante">O objetivo é tornar as <span class="textoGradiente">previsões</span> desportivas, climáticas e políticas <span class="textoGradiente">precisas</span> e <span class="textoGradiente">estatisticamente confiáveis</span>.</h4>
         </section>
 
         <section class="secao secao5">
@@ -424,12 +422,20 @@
         <!-- A SEÇÃO 6 FOI PARA CIMA HAHAHA -->
 
         <section class="secao secao7">
-            <h4 class="textoSecao7">Se ainda tiver dúvidas ou precisar de mais esclarecimentos, assista ao vídeo explicativo abaixo, criado especialmente para você</h4>
+            <h4 class="textoSecao7">Se ainda tiver <span class="textoGradiente">dúvidas</span> ou precisar de mais <span class="textoGradiente">esclarecimentos</span>, você pode <span class="textoGradiente">baixar </span>ou assistir o <span class="textoGradiente">vídeo explicativo</span> abaixo, <span class="textoGradiente">criado </span>especialmente <span class="textoGradiente">para você</span>.</h4>
             <nav class="navVideoExplicativo">
-                <video src=""></video>
+                <video src="assets/video/video777py.mp4" class="videoExplicativo" controls></video>
             </nav>
         </section>
         
+        <section class="secao secao8">
+            <nav class="navTextoSecao8">
+                <h4>Esta é a sua chance de transformar seus acertos em reconhecimento, oportunidade e recompensa real!</h4>
+            </nav>
+            <nav>
+                <img src="assets/img/imgSecao.png" alt="" srcset="">
+            </nav>
+        </section>
     </main>
 
     <script>
