Alterções na página inicial, criação do rodapé, adição de bg em algumas seções JS externo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-AO">
 <head>
     <meta charset="UTF-8"> 
-    <script src="script.js" defer></script>
+    <script src="assets/js/script.js" defer></script>
     <meta property="og:type" content="website">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+
     <div id="cursor"></div>
     <header class="menu">
         <nav>
@@ -312,7 +313,7 @@
                         <img src="assets/img/founder1.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
-                        Josefa "Jossy" Kiambi
+                        Nalita Kiambi
                     </nav>
                     <nav class="statusFundador">
                         Secretária e co-fundadora
@@ -360,12 +361,12 @@
                 <nav class="navPergunta">
                     <div class="efeitoPergunta"></div>
                     <nav class="pergunta">Sou menor de idade. Posso participar?</nav>
-                    <nav class="resposta">Sim! Todos podem participar! Não há proibições de idade, género, habilidades ou preferências de apostas. O mercado das apostas é proibido para menores de idade e o 777PY não é uma aposta, é uma pesquisa cientifíca.</nav>
+                    <nav class="resposta">Sim! Todos podem participar! Não há proibições de idade, género, habilidades ou preferências de apostas. O mercado das apostas é proibido para menores de idade e o 777PY não é uma casa de apostas, é uma pesquisa cientifíca.</nav>
                 </nav>
                 <nav class="navPergunta">
                     <div class="efeitoPergunta"></div>
                     <nav class="pergunta">O que será feito com os palpites que eu mandar?</nav>
-                    <nav class="resposta">Nessa fase (t=0), os palpites enviado por si, serão usados exclusivamente para otimizar, aprimorar e treinar o nosso software de predições desportivas.Acreditamos que com seus palpites podemos ajudar a prever eventos usando a estatística.</nav>
+                    <nav class="resposta">Nessa fase (t=0), os palpites enviado por si, serão usados exclusivamente para otimizar, aprimorar e treinar o nosso software de predições desportivas. Acreditamos que com seus palpites podemos ajudar a prever eventos usando a estatística.</nav>
                 </nav>
                 <nav class="navPergunta">
                     <div class="efeitoPergunta"></div>
@@ -422,7 +423,7 @@
         <!-- A SEÇÃO 6 FOI PARA CIMA HAHAHA -->
 
         <section class="secao secao7">
-            <h4 class="textoSecao7">Se ainda tiver <span class="textoGradiente">dúvidas</span> ou precisar de mais <span class="textoGradiente">esclarecimentos</span>, você pode <span class="textoGradiente">baixar </span>ou assistir o <span class="textoGradiente">vídeo explicativo</span> abaixo, <span class="textoGradiente">criado </span>especialmente <span class="textoGradiente">para você</span>.</h4>
+            <h4 class="textoSecao7">Se ainda tiver <span class="textoGradiente">dúvidas</span> ou precisar de mais <span class="textoGradiente">esclarecimentos</span>, você pode assistir o <span class="textoGradiente">vídeo explicativo</span> <span class="textoGradiente">criado </span>especialmente <span class="textoGradiente">para você</span>.</h4>
             <nav class="navVideoExplicativo">
                 <video src="assets/video/video777py.mp4" class="videoExplicativo" controls></video>
             </nav>
@@ -430,85 +431,48 @@
         
         <section class="secao secao8">
             <nav class="navTextoSecao8">
-                <h4>Esta é a sua chance de transformar seus acertos em reconhecimento, oportunidade e recompensa real!</h4>
-            </nav>
-            <nav>
-                <img src="assets/img/imgSecao.png" alt="" srcset="">
+                <h4>Esta é a sua chance de transformar seus palpites em <span class="textoGradiente">reconhecimento, </span> <span class="textoGradiente">oportunidade</span> e <span class="textoGradiente">recompensa real!</span></h4>
             </nav>
         </section>
+
+        <footer>
+            <div>
+                <nav class="navLogoFooter">
+                    <a href="#"><h1>777<sup>PY</sup></h1></a>
+                </nav>
+                <nav>
+                    <h5>Endereço</i></h5>
+                    <p>Centralidade do Kilamba, Bloco/Quarteirão R, Edifício/Prédio R15</p>
+                    <p>Luanda, Angola</p>
+                </nav>
+                <nav>
+                    <h5>Contatos</i></h5>
+                    <p>+244 926 226 365</p>
+                    <p>+244 922 006 668</p>
+                    <p>+244 946 186 275</p>
+                </nav>
+                <nav>
+                    <h5>Website</i></h5>
+                    <a href="#"><p>Como funciona?</p></a>
+                    <a href="#"><p>Como participar?</p></a>
+                    <a href="#"><p>Perguntas frequentes</p></a>
+                </nav>
+            </div>
+            <div>
+                <nav>
+                    <a href="#" target="_blank" rel="noopener noreferrer nofollow">Termos e Condições</a> &nbsp;
+                    <a href="#">Políticas de Privacidade</a>
+                </nav>
+                <nav>
+                    <a href="#"><i class="fa-brands fa-square-facebook iconeRedesSociais"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-whatsapp iconeRedesSociais"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-instagram iconeRedesSociais"></i></a>
+                    <a href="#"><i class="fa-brands fa-square-x-twitter iconeRedesSociais"></i></a>
+                </nav>
+            </div>
+        </footer>
     </main>
 
-    <script>
-        var bool = 0;
-        var verMais = document.querySelector(".navVerMaisFunciona")
-        verMais.addEventListener("click", ()=> {
-            var conteudo = document.querySelector(".secao2 .conteudoSecao")
-            conteudo.classList.toggle("active")
-            
-            verMais.innerHTML = "<button class='btn'>Ocultar</button>"
-        })
 
-        var verFundadores = document.querySelector(".todosFundadores");
-        verFundadores.addEventListener("click", () => {
-            var conteudo = document.querySelector(".secao4 .conteudoSecao4")
-            conteudo.classList.toggle("ativo")
-            verFundadores.innerHTML = "<button class='btn'>Ocultar</button>"
-        })
-
-        var verQuestoes = document.querySelector(".VerTodasQuestoes")
-        verQuestoes.addEventListener("click", () => {
-            var conteudo = document.querySelector(".secao5 .conteudoPerguntas")
-            conteudo.classList.toggle("active")
-            verQuestoes.innerHTML = "<button class='btn'>Ver Menos Questões</button>"
-        })
-
-
-        const cursor = document.getElementById("cursor")
-        document.addEventListener("mousemove", (e) => {
-            const mouseX = e.clientX;
-            const mouseY = e.clientY;
-
-            cursor.style.left = `${mouseX - cursor.offsetWidth/2}px`
-            cursor.style.top = `${mouseY - cursor.offsetHeight/2}px`
-        })
-
-        const parags = document.querySelectorAll(".secao3 .conteudoSecao3 nav p")
-        const updateActive = () => {
-            const middleY = window.innerHeight/2;
-
-            let closest = null
-            let closestDist = Infinity
-
-            parags.forEach(p=> {
-                const rect = p.getBoundingClientRect();
-                const dist = Math.abs((rect.top + rect.bottom)/2-middleY)
-                if (dist < closestDist) {
-                    closestDist = dist;
-                    closest = p;
-                }
-            });
-            parags.forEach(p=>p.classList.remove("activo"));
-            if(closest) closest.classList.add("activo")
-        };
-
-        window.addEventListener("scroll", updateActive)
-        window.addEventListener("resize", updateActive)
-        window.addEventListener("load", updateActive)
-
-
-        const cards = document.querySelectorAll(".CardFundador");
-
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add("active");
-        }
-      });
-    }, {
-      threshold: 0.5
-    });
-
-    cards.forEach(card => observer.observe(card));
-    </script>
 </body>
 </html>
