Adição da pasta views e termos

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <div id="cursor"></div>
     <header class="menu">
         <nav>
-            <a href="/"><h1>777<sup>PY</sup></h1></a>
+            <a href="index.html"><h1>777<sup>PY</sup></h1></a>
         </nav>
         <nav>
             <nav>
                 <a href="#" class="linksMenu">Página Inicial</a>
                 <a href="#" class="linksMenu">Como funciona?</a>
-                <a href="#" class="linksMenu active">Posso participar?</a>
+                <a href="#" class="linksMenu">Posso participar?</a>
                 <a href="#" class="linksMenu">Quem somos?</a>
             </nav>
             <nav class="navBtns">
@@ -355,8 +355,8 @@
                 </nav>
                 <nav class="navPergunta">
                     <div class="efeitoPergunta"></div>
-                    <nav class="pergunta">Quanto custa para participar do desafio?</nav>
-                    <nav class="resposta">0Kzs! A participação no desafio ou na nossa pesquisa é totalmente gratuita. Também não é necessário pagar nada para enviar os seus palpites.</nav>
+                    <nav class="pergunta">Quanto custa para participar da pesquisa (desafio)?</nav>
+                    <nav class="resposta">0.00 Kzs! A participação no desafio é totalmente gratuita. Também não é necessário pagar nada para enviar os seus palpites. O único compromisso exigido é a sua estratégia e seu palpite certeiro.</nav>
                 </nav>
                 <nav class="navPergunta">
                     <div class="efeitoPergunta"></div>
@@ -393,6 +393,11 @@
                     <div class="efeitoPergunta"></div>
                     <nav class="pergunta">O que acontece se eu errar os palpites?</nav>
                     <nav class="resposta">Você estará imediatamente desqualificado e não será considerado para o prémio até qua novas rodadas sejam abertas ou a nossa equipe considerar o seu desempenho elegível para uma segunda chance.</nav>
+                </nav>
+                <nav class="navPergunta">
+                    <div class="efeitoPergunta"></div>
+                    <nav class="pergunta">A pesquisa (desafio) é apenas desportiva?</nav>
+                    <nav class="resposta">Não! Mas, na fase inicial (t=0), a pesquisa é exclusivamente desportivas. Os desafios para as predições em eventos climáticos e políticos serão anunciados brevemente pelos canais oficiais da nossa startup.</nav>
                 </nav>
                 <nav class="navPergunta">
                     <div class="efeitoPergunta"></div>
@@ -436,40 +441,19 @@
         </section>
 
         <footer>
-            <div>
-                <nav class="navLogoFooter">
-                    <a href="#"><h1>777<sup>PY</sup></h1></a>
-                </nav>
-                <nav>
-                    <h5>Endereço</i></h5>
-                    <p>Centralidade do Kilamba, Bloco/Quarteirão R, Edifício/Prédio R15</p>
-                    <p>Luanda, Angola</p>
-                </nav>
-                <nav>
-                    <h5>Contatos</i></h5>
-                    <p>+244 926 226 365</p>
-                    <p>+244 922 006 668</p>
-                    <p>+244 946 186 275</p>
-                </nav>
-                <nav>
-                    <h5>Website</i></h5>
-                    <a href="#"><p>Como funciona?</p></a>
-                    <a href="#"><p>Como participar?</p></a>
-                    <a href="#"><p>Perguntas frequentes</p></a>
-                </nav>
-            </div>
-            <div>
-                <nav>
-                    <a href="#" target="_blank" rel="noopener noreferrer nofollow">Termos e Condições</a> &nbsp;
-                    <a href="#">Políticas de Privacidade</a>
-                </nav>
-                <nav>
-                    <a href="#"><i class="fa-brands fa-square-facebook iconeRedesSociais"></i></a>
-                    <a href="#"><i class="fa-brands fa-square-whatsapp iconeRedesSociais"></i></a>
-                    <a href="#"><i class="fa-brands fa-square-instagram iconeRedesSociais"></i></a>
-                    <a href="#"><i class="fa-brands fa-square-x-twitter iconeRedesSociais"></i></a>
-                </nav>
-            </div>
+            <nav class="navLogoFooter">
+                <a href="#"><h1>777<sup>PY &copy;</sup></h1></a>
+            </nav>
+            <nav>
+                <a href="views/termos.html" rel="noopener noreferrer nofollow">Termos e Condições</a> &nbsp;
+                <a href="#" rel="noopener noreferrer nofollow">Políticas de Privacidade</a>
+            </nav>
+            <nav>
+                <a href="#"><i class="fa-brands fa-square-facebook iconeRedesSociais"></i></a>
+                <a href="#"><i class="fa-brands fa-square-whatsapp iconeRedesSociais"></i></a>
+                <a href="#"><i class="fa-brands fa-square-instagram iconeRedesSociais"></i></a>
+                <a href="#"><i class="fa-brands fa-square-x-twitter iconeRedesSociais"></i></a>
+            </nav>
         </footer>
     </main>
 
