Adição da Política de Privacidade

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 <nav class="navPergunta">
                     <div class="efeitoPergunta"></div>
                     <nav class="pergunta">Devo enviar os meus dados pessoais?</nav>
-                    <nav class="resposta">Em qualquer fase do desafio a nossa poderá solicitar alguns dados pessoais, para a sua identificação, acompanhamento diário, metódos de pagamentos ou a atribuição dos prémios. Seus dados estarão seguros, restrito e usados exclusivamente para esses fins.</nav>
+                    <nav class="resposta">Em qualquer fase do desafio poderemos solicitar seus dados pessoais, para a sua identificação, acompanhamento diário, metódos de pagamentos ou atribuição dos prémios. Seus dados estarão seguros e usaremos exclusivamente para esses fins. Consulte a nossa Política de Privacidade.</nav>
                 </nav>
                 <nav class="navPergunta">
                     <div class="efeitoPergunta"></div>
@@ -446,7 +446,7 @@
             </nav>
             <nav>
                 <a href="views/termos.html" rel="noopener noreferrer nofollow">Termos e Condições</a> &nbsp;
-                <a href="#" rel="noopener noreferrer nofollow">Políticas de Privacidade</a>
+                <a href="views/politica.html" rel="noopener noreferrer nofollow">Políticas de Privacidade</a>
             </nav>
             <nav>
                 <a href="#"><i class="fa-brands fa-square-facebook iconeRedesSociais"></i></a>
