Adição dos dizeres

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section class="secao1">
             <nav>
                 <h1 id="titleHero">Prevemos o <span class="textoEfeito">futuro!</span> O seu <span class="textoEfeito">palpite,</span> a nossa <span class="textoEfeito">ciência.</span></h1>
-                <p id="textoHero">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa repudiandae placeat quos. Voluptas, culpa assumenda! Unde aut eum est iste, quo, non nihil dicta aliquam rem enim voluptate repellendus expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium perferendis ducimus provident consequuntur sint eligendi voluptatibus saepe dignissimos dolores animi blanditiis aliquid dolor minima facilis, quis esse reprehenderit ipsam id.</p>
+                <p id="textoHero">A 777PY está te dando uma chance real: transformar os teus palpites em reconhecimento, oportunidade e recompensa de verdade. Aqui, a tua intuição, estratégia e palpite viram ciência. Cada palpite teu nos ajuda a criar previsões mais confiáveis e estatisticamente certeiras. Enquanto muitos apostam no escuro e perdem dinheiro, tu chegas com estratégia, foco e coragem. E em apenas 10 dias podes sair com 2.5 milhões de kwanzas no bolso. A pergunta é simples: Vais continuar a sonhar… ou vais fazer acontecer com a 777PY?</p>
                 <nav class="navBtns">
                     <a href="#"><button class="btn btn0">Saiba Mais</button></a>
                     <a href=""><button class="btn">Assistir Vídeo Explicativo</button></a>
@@ -61,10 +61,10 @@
             <div class="divTopoSecao">
                 <nav>
                     <h2 class="tituloSecao">Saiba Como <span class="textoSemEfeito">Funciona.</span></h2>
-                    <p class="textoSecao">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde inventore repudiandae animi atque. Similique voluptate expedita vel repellendus modi! Alias, minus sed placeat consectetur necessitatibus saepe culpa voluptates asperiores vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sequi, iure sed dicta suscipit et voluptas ea qui impedit numquam recusandae provident modi aliquid, quas totam. Iste suscipit deleniti fugiat!</p>
+                    <p class="textoSecao">Estamos à tua espera — e acreditamos que o teu palpite vale ouro. Escolhe a modalidade que dominas, como futebol, boxe ou basquetebol, e monta os teus palpites certeiros com total liberdade. Podes escolher qualquer tipo de código: total de golos/pontos, vencedor direto, handicaps, parte mais produtiva ou outros mercados à tua escolha. Decide se queres apostar num único jogo, numa múltipla ou até numa construção mais elaborada. Só precisas garantir que o total de pontos por palpite esteja entre 5 e 10 pontos. Depois disso, é simples: tira um screenshot ou envia o ID do teu palpite para nós através do WhatsApp, e-mail ou Facebook. Continua a participar durante 10 dias consecutivos, e se acertares todos os palpites... ganhas 2.500.000 Kz na hora!</p>
                 </nav>
                 <nav>
-                    <p class="textoSecaoLado">Lorem ipsum dolor sit amet <span class="textoColorido">consectetur</span> adipisicing elit. <span class="textoColorido">Maiores</span> aliquam amet cumque illum laboriosam quidem quas? Sint numquam, <span class="textoColorido">voluptate</span> aut quia, reiciendis voluptate <span class="textoColorido">Lopraesentium</span> nisi illum, et nemo sunt accusantium?</p>
+                    <p class="textoSecaoLado">Acreditamos em você e na tua estratégia que o ajudará a <span class="textoColorido">milhões de kwanzas</span>. Junte-se a <span class="textoColorido">777PY</span> e mostre o poder da tua <span class="textoColorido">intuição, raciocínio e palpites.</span> Transforme em conquistas <span class="textoColorido">reais e lucrativas.</span></p>
                 </nav>
             </div>
             <div class="conteudoSecao">
@@ -170,10 +170,10 @@
             <div class="divTopoSecao">
                 <nav>
                     <h2 class="tituloSecao">Quem Pode <span class="textoSemEfeito">Participar?</span></h2>
-                    <p class="textoSecao">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde inventore repudiandae animi atque. Similique voluptate expedita vel repellendus modi! Alias, minus sed placeat consectetur necessitatibus saepe culpa voluptates asperiores vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sequi, iure sed dicta suscipit et voluptas ea qui impedit numquam recusandae provident modi aliquid, quas totam. Iste suscipit deleniti fugiat!</p>
+                    <p class="textoSecao">Temos o conhecimento da lei angolana que proibe a participação em apostas ou jogos de azar para menores de idade. Mas o 777Py não é uma casa de aposta ou jogo de azar. Promovemos uma pesquisa cientifíca e qualquer pessoa está totalmente apta a participação na nossa pesquisa. O único compromisso exigido é o seu palpite certeiro, raciocínio, sua estratégia e dedicação.</p>
                 </nav>
                 <nav>
-                    <p class="textoSecaoLado">Lorem ipsum dolor sit amet <span class="textoColorido">consectetur</span> adipisicing elit. <span class="textoColorido">Maiores</span> aliquam amet cumque illum laboriosam quidem quas? Sint numquam, <span class="textoColorido">voluptate</span> aut quia, reiciendis voluptate <span class="textoColorido">Lopraesentium</span> nisi illum, et nemo sunt accusantium?</p>
+                    <p class="textoSecaoLado">Todos podem participar, é um desafio abrangente e inclusivo. Não proibições de <span class="textoColorido">idade, género, habilidades, nacionalidade ou preferências de casas de apostas.</span> Esperamos por si e pelos seus palpites</p>
                 </nav>
             </div>
 
