Adicionei dizeres em toda a index

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section class="secao1">
             <nav>
                 <h1 id="titleHero">Prevemos o <span class="textoEfeito">futuro!</span> O seu <span class="textoEfeito">palpite,</span> a nossa <span class="textoEfeito">ciência.</span></h1>
-                <p id="textoHero">A 777PY está te dando uma chance real: transformar os teus palpites em reconhecimento, oportunidade e recompensa de verdade. Aqui, a tua intuição, estratégia e palpite viram ciência. Cada palpite teu nos ajuda a criar previsões mais confiáveis e estatisticamente certeiras. Enquanto muitos apostam no escuro e perdem dinheiro, tu chegas com estratégia, foco e coragem. E em apenas 10 dias podes sair com 2.5 milhões de kwanzas no bolso. A pergunta é simples: Vais continuar a sonhar… ou vais fazer acontecer com a 777PY?</p>
+                <p id="textoHero">A 777PY está dando uma chance real: transformar os teus palpites em reconhecimento, oportunidade e recompensa de verdade. Aqui, a tua intuição, estratégia e palpite viram ciência. Cada palpite teu nos ajuda a criar previsões mais confiáveis e estatisticamente certeiras. Enquanto muitos apostam no escuro e perdem dinheiro, você usa 777 com estratégia, foco e coragem. E em apenas 10 dias podes sair com 2.5 milhões de kwanzas. A pergunta é simples: Vais continuar a sonhar… ou vais fazer acontecer com a 777PY?</p>
                 <nav class="navBtns">
                     <a href="#"><button class="btn btn0">Saiba Mais</button></a>
                     <a href=""><button class="btn">Assistir Vídeo Explicativo</button></a>
@@ -64,7 +64,7 @@
                     <p class="textoSecao">Estamos à tua espera — e acreditamos que o teu palpite vale ouro. Escolhe a modalidade que dominas, como futebol, boxe ou basquetebol, e monta os teus palpites certeiros com total liberdade. Podes escolher qualquer tipo de código: total de golos/pontos, vencedor direto, handicaps, parte mais produtiva ou outros mercados à tua escolha. Decide se queres apostar num único jogo, numa múltipla ou até numa construção mais elaborada. Só precisas garantir que o total de pontos por palpite esteja entre 5 e 10 pontos. Depois disso, é simples: tira um screenshot ou envia o ID do teu palpite para nós através do WhatsApp, e-mail ou Facebook. Continua a participar durante 10 dias consecutivos, e se acertares todos os palpites... ganhas 2.500.000 Kz na hora!</p>
                 </nav>
                 <nav>
-                    <p class="textoSecaoLado">Acreditamos em você e na tua estratégia que o ajudará a <span class="textoColorido">milhões de kwanzas</span>. Junte-se a <span class="textoColorido">777PY</span> e mostre o poder da tua <span class="textoColorido">intuição, raciocínio e palpites.</span> Transforme em conquistas <span class="textoColorido">reais e lucrativas.</span></p>
+                    <p class="textoSecaoLado">Acreditamos em você e na tua estratégia que o ajudará a <span class="textoColorido">ganhar milhões de kwanzas</span>. Junte-se a <span class="textoColorido">777PY</span> e mostre o poder da tua <span class="textoColorido">intuição, raciocínio e palpites.</span> Transforme em conquistas <span class="textoColorido">reais e lucrativas.</span></p>
                 </nav>
             </div>
             <div class="conteudoSecao">
@@ -170,7 +170,7 @@
             <div class="divTopoSecao">
                 <nav>
                     <h2 class="tituloSecao">Quem Pode <span class="textoSemEfeito">Participar?</span></h2>
-                    <p class="textoSecao">Temos o conhecimento da lei angolana que proibe a participação em apostas ou jogos de azar para menores de idade. Mas o 777Py não é uma casa de aposta ou jogo de azar. Promovemos uma pesquisa cientifíca e qualquer pessoa está totalmente apta a participação na nossa pesquisa. O único compromisso exigido é o seu palpite certeiro, raciocínio, sua estratégia e dedicação.</p>
+                    <p class="textoSecao">Temos o conhecimento da lei angolana que proibe a participação em apostas ou jogos de azar para menores de idade. Mas o 777Py não é uma casa de aposta ou jogo de azar. Promovemos uma pesquisa cientifíca e experimentos que estamos conduzindo, que aprimorar, otimizar, treinar o nosso software e analisar como pessoas de diferentes idades lidam com decisões que baseadas em probabilidades. Não é um jogo de azar, é metodologia científica de estudo e aprendizado e qualquer pessoa está totalmente apta a participação na nossa pesquisa. O único compromisso exigido é o seu palpite certeiro.</p>
                 </nav>
                 <nav>
                     <p class="textoSecaoLado">Todos podem participar, é um desafio abrangente e inclusivo. Não proibições de <span class="textoColorido">idade, género, habilidades, nacionalidade ou preferências de casas de apostas.</span> Esperamos por si e pelos seus palpites</p>
@@ -179,13 +179,15 @@
 
             <div class="conteudoSecao3">
                 <nav>
-                    <p class="paragrafosSecao3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique laborum aperiam, amet minus ad doloremque blanditiis reiciendis, sequi possimus exercitationem mollitia ipsam? Id omnis magni praesentium atque eius. Odit, odio.</p>
+                    <p class="paragrafosSecao3">Acreditamos que existem milhares de apostadores com potencial escondido - pessoas que usam lógica, raciocínio e uma leitura de incrível de jogos, mas que nunca foram reconhecidas por isso. A 777 chegou para mudar esse jogo. Aqui, seus palpites são tratados com resultados que merecem.</p>
 
-                    <p class="paragrafosSecao3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique laborum aperiam, amet minus ad doloremque blanditiis reiciendis, sequi possimus exercitationem mollitia ipsam? Id omnis magni praesentium atque eius. Odit, odio.</p>
+                    <p class="paragrafosSecao3">Nosso desafio de 10 dias é apenas o começo. É a oportunidade mostrar que você entende do assunto, que pensa diferente e pode provar isso com resultados. E mais: uma chance de ganhar 2.500.000 Kzs em 10 dias, reconhecimento e até uma vaga na nossa startup.</p>
 
-                    <p class="paragrafosSecao3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique laborum aperiam, amet minus ad doloremque blanditiis reiciendis, sequi possimus exercitationem mollitia ipsam? Id omnis magni praesentium atque eius. Odit, odio.</p>
+                    <p class="paragrafosSecao3">777PY é muito mais do que um projeto - é um movimento. É um movimento onde um o apostador deixa de ser visto como um mero jogador de sorte, e passa a ser reconhecido como estrategista e jogador analista. Lembre-se, o teu palpite vale ouro!</p>
 
-                    <p class="paragrafosSecao3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique laborum aperiam, amet minus ad doloremque blanditiis reiciendis, sequi possimus exercitationem mollitia ipsam? Id omnis magni praesentium atque eius. Odit, odio.</p>
+                    <p class="paragrafosSecao3">O número 777 na tradição cristã representa perfeição, totalidade e conclusão (comos os 7 dias da criação). Repetido três vezes, o 777 é visto como a manifestação mais pura da perfeição divina. Na matemática, é um número palíndromo, ou seja, lido da mesma forma de trás para frente. Na base binária, é representada como 1100001001, em algarismos romanos como DCCLXXVII. Se quiseres saber mais, junte-se a nossa startup... hahaha</p>
+
+<p class="paragrafosSecao3">Se chegaste até a 777PY, é porque dentro de ti existe um sonhador, um pensador, um estratega, um visionário. Se estás aqui, és alguém que vê o jogo diferente, que sente o momento, analisa, conecta os pontos e transforma palpite em 2.5 milhões em 10 dias. Acreditamos no teu talento, na tua leitura de jogo, na tua coragem e na tua vontade de ser milionário em 10 dias. Entra nessa desafio com confiança, mostre o teu raciocínio. Se vence agindo, o teu palpite é o teu maior trunfo e faz ela valer 2.500.000 Kzs.</p>
                 </nav>
             </div>
         </section>
@@ -194,10 +196,10 @@
             <div class="divTopoSecao">
                 <nav>
                     <h2 class="tituloSecao">Conheça a <span class="textoSemEfeito">777<sup style="color: #40E194; -webkit-text-stroke: #40E194;">PY</sup></span></h2>
-                    <p class="textoSecao">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde inventore repudiandae animi atque. Similique voluptate expedita vel repellendus modi! Alias, minus sed placeat consectetur necessitatibus saepe culpa voluptates asperiores vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sequi, iure sed dicta suscipit et voluptas ea qui impedit numquam recusandae provident modi aliquid, quas totam. Iste suscipit deleniti fugiat!</p>
+                    <p class="textoSecao">É um projeto científico puramente angolano. Criada e fundada por jovens angolanos apaixonados por tecnologia, matemática e ciência. O projeto nasceu de uma visão ousada de transformar a intuição e o conhecimento dos apostadores em uma força real dentro do universo das estátisticas e previsões de diferentes eventos. O nome "777PY" carrega consigo dois significados poderosos: O número 777 é um número que carrega significados profundos em diversas áreas - espiritualidade, cultura, matemática, religião, simbologia e até no mundo dos jogos - é considerado um número matematicamente fascinante e divinamente perfeito. O "PY" é homenagem ao Python, a linguagem de programação usada nos nossos algoritmos estatísticos e análises matemáticas.</p>
                 </nav>
                 <nav>
-                    <p class="textoSecaoLado">Lorem ipsum dolor sit amet <span class="textoColorido">consectetur</span> adipisicing elit. <span class="textoColorido">Maiores</span> aliquam amet cumque illum laboriosam quidem quas? Sint numquam, <span class="textoColorido">voluptate</span> aut quia, reiciendis voluptate <span class="textoColorido">Lopraesentium</span> nisi illum, et nemo sunt accusantium?</p>
+                    <p class="textoSecaoLado">A nossa equipe é uma combinação de <span class="textoColorido">nerds, cientistas da computação, programadores, designers, matemáticos e teóricos de estatísticas.</span> Juntos, acreditamos podemos criar algo grandioso e abrir<span class="textoColorido"> oportunidades reais a apostadores</span> talentosos e sonhadores. Aqui, <span class="textoColorido">o teu raciocínio</span> é valorizado.</p>
                 </nav>
             </div>
             <div class="conteudoSecao4">
@@ -336,10 +338,10 @@
             <div class="divTopoSecao">
                 <nav>
                     <h2 class="tituloSecao">Perguntas <span class="textoSemEfeito">Frequentes</span></h2>
-                    <p class="textoSecao">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde inventore repudiandae animi atque. Similique voluptate expedita vel repellendus modi! Alias, minus sed placeat consectetur necessitatibus saepe culpa voluptates asperiores vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sequi, iure sed dicta suscipit et voluptas ea qui impedit numquam recusandae provident modi aliquid, quas totam. Iste suscipit deleniti fugiat!</p>
+                    <p class="textoSecao">Seja bem-vindo a nossa seção de Perguntas Frequentes (FAQ). No 777PY, nos empenhamos em oferecer uma experiência transparente e educativa, sempre com foco na pesquisa científica. Sabemos que, muitas vezes, o processo de entender um projeto como esse gera dúvidas, por isso criamos esta área para esclarecer as questões mais comuns. Nossa equipe está pronta para responder todas as suas perguntas e fornecer suporte necessário para que você possa aproveitar ao máximo tudo o que o 777Py tem a oferecer.</p>
                 </nav>
                 <nav>
-                    <p class="textoSecaoLado">Lorem ipsum dolor sit amet <span class="textoColorido">consectetur</span> adipisicing elit. <span class="textoColorido">Maiores</span> aliquam amet cumque illum laboriosam quidem quas? Sint numquam, <span class="textoColorido">voluptate</span> aut quia, reiciendis voluptate <span class="textoColorido">Lopraesentium</span> nisi illum, et nemo sunt accusantium?</p>
+                    <p class="textoSecaoLado">No entanto, naturalmente, entendemos que cada <span class="textoColorido">usuário</span> tem necessidades específicas. E, estamos sempre prontos para ajudar <span class="textoColorido">você</span>, caso a sua dúvida não esteja na área abaixo ou deseja saber mais sobre nosso projeto, nossa pesquisa ou qualquer outro aspecto do 777PY, não hesite e entre em contato connosco pelos <span class="textoColorido">canais oficiais da 777PY</span> que você preferir.</p>
                 </nav>
             </div>
             <div class="conteudoPerguntas">
@@ -399,6 +401,7 @@
                     <nav class="pergunta">A pesquisa (desafio) é apenas desportiva?</nav>
                     <nav class="resposta">Não! Mas, na fase inicial (t=0), a pesquisa é exclusivamente desportivas. Os desafios para as predições em eventos climáticos e políticos serão anunciados brevemente pelos canais oficiais da nossa startup.</nav>
                 </nav>
+
                 <nav class="navPergunta">
                     <div class="efeitoPergunta"></div>
                     <nav class="pergunta">Como e onde devo enviar os meus palpites?</nav>
